@@ -1,0 +1,31 @@
+[% WRAPPER ui title = 'Breaks and meals' %]
+<div class="row">
+
+    <h2>Breaks and meals</h2>
+    <p>
+      Thanks to <a href="/ye2015/our_sponsors.html">our sponsors</a>, <a href="#preconf">pre-conference dinner</a>, <a href="#coffee-breaks">coffee-breaks</a>, <a href="#lunches">lunches</a> and <a href="conference-dinner">conference dinner</a> will be available for all the attendees to YAPC::EU 2015.
+    </p>
+    <p>
+      A <strong id="preconf">pre-conference dinner</strong> will be celebrated on Tuesday, 1 of September. Our sponsor Eligo will invite us to pizza and drinks, from 19:00 to 21:00, at the Conference venue's inner garden. <a href="/ye2015/venu.html#plano-ciencias">You can get more information if you see the venue's map</a>.
+    </p>
+
+    <p>
+      <strong id="coffee-breaks">Coffee-breaks</strong> are scheduled for Wednesday, Thursday and Friday at 10:30 and 16:30, lasting no more than 30 mins. The will be served next to the rooms where the talks will take place.
+    </p>
+    <p>
+      <strong id="lunches">Lunches</strong> will start every day at 13:00, lasting 90 mins, and are sponsored by Booking.
+    </p>
+    <p>
+       Lunches are organized as a <em>tapas crawl</em>, since Granada is well-known for an ancient tradition of complementing your drink (in bars and cafes) with a small amount of food (the <em>tapa</em>). We have reached an agreement with many bars sorrounding the Conference venue that will accept <em>Coinions</em> (the "official" Conference's coin) as the way to pay for your drink and it's associated tapa.
+    </p>
+    <p>
+      Thus, when registering yourself at the Conference's registration desk, you will get 20 <em>Coinions</em>, divided into 10 tickets. So, feel free to spend them as you prefer, probably visiting the different bars associated with this initiative.
+    </p>
+    <p>
+      In short, we'll provide a list of the bars where <em>Coinions</em> are accepted, including their locations.
+    </p>
+    <P>
+      Finally, the <strong id="conference-dinner">Conference Dinner</strong> will take place on Wednesday (2 of September), 21:00 hours, at <a href="http://act.yapc.eu/ye2015/wiki?node=Hotel%20Los%20Angeles">Hotel Los Angeles</a>. This dinner is included in your registration, but <a hre="http://act.yapc.eu/ye2015/purchase">you can buy addtional tickets for your guests</a>.
+    </p>
+</div>
+ [% END %]
