@@ -6,7 +6,9 @@
     <li><a href="/ye2015/keynotes.html">Keynotes</a></li>
     <li><a href="/ye2015/panelpage.html">Panel</a></li>
     <li><a href="/ye2015/venue.html">Venue</a></li>
+    <li><a href="/ye2015/breaks-meals.html">Breaks and meals</a></li>
     <li><a href="/ye2015/pricesanddates.html">Prices and Dates</a></li>
+    <li class="divider"></li>
     <li><a href="/ye2015/wiki?node=Organizers">Organizers</a></li>
     <li><a href="/ye2015/wiki?node=About">About YAPC</a></li>
     </ul>
