@@ -21,6 +21,8 @@
 [% IF global.request.user.is_news_admin %]
 [% WRAPPER menus/item %]
 <li class="divider"></li>
+[% END %]
+[% WRAPPER menus/item %]
 <a href="[% make_uri('newsadmin') %]">{{News Administration}}</a>
 [% END %]
 [% END %]
